Conversion to es6 modules + css cleanup

--- a/templates/template-card.html
+++ b/templates/template-card.html
@@ -6,12 +6,12 @@
   </div>
 
   <div class="card__details">
-    <div class="card__detail-box">
-      <h6 class="card__detail card__detail--organic {%not-organic%}">Organic!</h6>
+    <div class="card__detail-box {%not-organic%}">
+      <h6 class="card__detail card__detail--organic">Organic!</h6>
     </div>
 
     <div class="card__detail-box">
-      <h6 class="card__detail">{%quantity%} {%image%} per 📦</h6>
+      <h6 class="card__detail">{%quantity%} per 📦</h6>
     </div>
 
     <div class="card__detail-box">
@@ -22,4 +22,4 @@
   <a class="card__link" href="/product?id={%id%}">
     <span>Detail <i class="emoji-right">👉</i></span>
   </a>
-</figure>    
+</figure>
