--- a/templates/template-overview.html
+++ b/templates/template-overview.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/155/ear-of-maize_1f33d.png"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Megrim&family=Nunito+Sans:wght@400;900&display=swap" rel="stylesheet">
+    <link
+      rel="icon"
+      href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/155/ear-of-maize_1f33d.png"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Megrim&family=Nunito+Sans:wght@400;900&display=swap"
+      rel="stylesheet"
+    />
 
     <title>NODE FARM</title>
 
@@ -28,14 +34,14 @@
       body {
         padding: 5rem 5rem 10rem;
         line-height: 1.7;
-        font-family: 'Nunito Sans', sans-serif;
+        font-family: "Nunito Sans", sans-serif;
         color: #555;
         min-height: 100vh;
         background: linear-gradient(to bottom right, #9be15d, #00e3ae);
       }
 
       h1 {
-        font-family: 'Megrim', sans-serif;
+        font-family: "Megrim", sans-serif;
         font-size: 6rem;
         color: white;
         transform: skewY(-5deg);
@@ -45,7 +51,7 @@
       }
 
       h1::before {
-        content: '';
+        content: "";
         display: block;
         height: 65%;
         width: 49%;
@@ -80,7 +86,7 @@
         font-size: 5.5rem;
         line-height: 1.2;
         padding: 1.5rem 6rem 0.5rem 1.5rem;
-        letter-spacing: -4rem;
+        letter-spacing: -4.9rem;
         transform: skewX(20deg);
       }
 
@@ -93,7 +99,7 @@
       }
 
       .card__title {
-        font-family: 'Megrim', sans-serif;
+        font-family: "Megrim", sans-serif;
         color: white;
         font-size: 3.25rem;
         transform: skewX(20deg);
@@ -187,9 +193,7 @@
     <div class="container">
       <h1>🌽 Node Farm 🥦</h1>
 
-      <div class="cards-container">
-        {%product-card%}
-        </div>
+      <div class="cards-container">{%product-card%}</div>
     </div>
   </body>
 </html>
