--- a/templates/template-product.html
+++ b/templates/template-product.html
@@ -3,11 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <link rel="icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/155/ear-of-maize_1f33d.png"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Megrim&family=Nunito+Sans:wght@400;900&display=swap" rel="stylesheet">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="icon"
+      href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/155/ear-of-maize_1f33d.png"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Megrim&family=Nunito+Sans:wght@400;900&display=swap"
+      rel="stylesheet"
+    />
 
     <title>{%productName%} {%image%} /// NODE FARM</title>
 
@@ -28,14 +34,14 @@
       body {
         padding: 5rem 5rem 10rem;
         line-height: 1.7;
-        font-family: 'Nunito Sans', sans-serif;
+        font-family: "Nunito Sans", sans-serif;
         color: #555;
         min-height: 100vh;
         background: linear-gradient(to bottom right, #9be15d, #00e3ae);
       }
 
       h1 {
-        font-family: 'Megrim', sans-serif;
+        font-family: "Megrim", sans-serif;
         font-size: 6rem;
         color: white;
         transform: skewY(-5deg);
@@ -45,7 +51,7 @@
       }
 
       h1::before {
-        content: '';
+        content: "";
         display: block;
         height: 65%;
         width: 49%;
@@ -79,7 +85,7 @@
       }
 
       .product__hero::before {
-        content: '';
+        content: "";
         display: block;
         height: 100%;
         width: 100%;
@@ -194,7 +200,7 @@
       .product__name {
         background: linear-gradient(to bottom, #9be15d, #00e3ae);
         padding: 1rem;
-        font-family: 'Megrim', sans-serif;
+        font-family: "Megrim", sans-serif;
         font-size: 4rem;
         color: white;
         text-align: center;
@@ -288,17 +294,14 @@
           <p><span class="emoji-left">📦</span>{%quantity%}</p>
           <p><span class="emoji-left">🏷</span>{%price%}€</p>
         </div>
-  
+
         <a href="#" class="product__link">
           <span class="emoji-left">🛒</span>
           <span>Add to shopping card ({%price%}€)</span>
         </a>
-  
-        <p class="product__description">
-          {%description%}
-        </p>
+
+        <p class="product__description">{%description%}</p>
       </figure>
-      
     </div>
   </body>
 </html>
